# react-native-craby-base64

./: ANDROID_NDK.md  LICENSE  README.md  craby.toml  package.json  react-native-craby-base64.podspec  react-native.config.js  tsconfig.json
.github/workflows/: publish.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/rs/craby/reactnativecrabybase64/: ReactNativeCrabyBase64Package.kt
android/src/main/jni/: OnLoad.cpp
android/src/main/jni/include/: CrabySignals.h
android/src/main/jni/src/: ffi.rs.cc
android/stubs/: CMakeLists.txt  ReactNativeCrabyBase64_stub.cpp  ReactNativeCrabyBase64_stub.h
cpp/: CrabyUtils.hpp  CxxReactNativeCrabyBase64Module.cpp  CxxReactNativeCrabyBase64Module.hpp
crates/lib/: Cargo.toml
crates/lib/src/: ffi.rs  generated.rs  lib.rs  react_native_craby_base_64_impl.rs
example/: App.tsx  app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/ReactNativeCrabyBase64Example/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/ReactNativeCrabyBase64Example.xcodeproj/: project.pbxproj
example/ios/ReactNativeCrabyBase64Example.xcodeproj/xcshareddata/xcschemes/: ReactNativeCrabyBase64Example.xcscheme
example/ios/ReactNativeCrabyBase64Example.xcworkspace/: contents.xcworkspacedata
ios/: ReactNativeCrabyBase64ModuleProvider.mm
ios/include/: CrabySignals.h  ffi.rs.h
src/: NativeReactNativeCrabyBase64.ts  index.ts
(+3 files in other folders)
