[package]
name = "react_native_craby_base_64"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0.99"
base64 = "0.22.1"
craby = "0.1.0-rc"
cxx = { version = "1.0.187", features = ["c++20"] }

[build-dependencies]
craby_build = { version = "0.1.0-rc", features = ["cxx"] }

[lib]
name = "reactnativecrabybase64"
crate-type = ["staticlib"]
